update to return json object